// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader styles renders LoaderContainer correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fffffe;
  color: #232946;
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 99;
}

.dark-mode .c0 {
  background-color: #232946;
  color: #fffffe;
}

<div
  class="c0"
/>
`;

exports[`Loader styles renders LogoWrapper correctly 1`] = `
.c0 {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  -webkit-transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
  transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
  opacity: 1;
}

.c0 svg {
  width: 100%;
  height: 100%;
  display: block;
  margin: 0 auto;
}

<div
  class="c0"
/>
`;

exports[`Loader styles renders LogoWrapper correctly 2`] = `
.c0 {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  -webkit-transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
  transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
  opacity: 0;
}

.c0 svg {
  width: 100%;
  height: 100%;
  display: block;
  margin: 0 auto;
}

<div
  class="c0"
/>
`;
